# kt-msgpack

./: COPYING  Makefile.am  NOTICE  README.md  configure.in  msgpack-rpc  preprocess
client/: KyotoCabinetClient.java  KyotoTycoonClient.java
src/: Makefile.am  kt-msgpack.cc  kt.thrift
